--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html lang="en">
 	<head>
 		<title>Keeper App</title>
+		<base href="/" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -13,6 +14,5 @@
 
 	<body>
 		<div id="app"></div>
-		<script src="../src/index.js" type="text/jsx"></script>
 	</body>
 </html>
