change heading style

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html lang="en">
 	<head>
-		<title>Keeper App</title>
+		<title>Organizer App</title>
 		<base href="/organizer" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
